--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -48,14 +48,16 @@ a {
 
 /* Track */
 ::-webkit-scrollbar-track {
+  background: transparent;
+  /*
   background: #F8F8F8;
-
+  */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #031521;
-  border-radius: 8px;
+  border-radius: 2px;
 }
 
 /* Handle on hover */
@@ -111,10 +113,27 @@ a {
 
     margin-top: 8px;
   }
+  
+  .home-properties-0-container-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-start;
+
+    margin-right: 16px;
+  }
+
+  .home-properties-0-container-letters {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 
   .home-properties-0-icon {
-    width: 20%;
-    height: 20%;
+    width: 48px;
+    height: 48px;
   }
 
   .home-banner-title {
@@ -204,7 +223,7 @@ a {
 
   .footer-container {
     width: 100%;
-    height: 220px;
+    height: 160px;
 
     display: flex;
     flex-direction: row;
@@ -419,7 +438,7 @@ a {
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: flex-start;
 
     margin: 0px;
@@ -432,21 +451,22 @@ a {
   }
 
   .home-properties-0-card {
-    width: 280px;
+    width: 22%;
 
-    align-self: flex-start;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+
     text-align: left;
-
-    margin-left: 24px;
-    margin-right: 24px;
   }
-
+/*
   .home-properties-1-container-image {
     width: 600px;
     height: 450px;
     align-self: center;
   }
-
+*/
   .home-properties-7-container-image {
     width: 320px;
     height: 420px;
@@ -455,7 +475,40 @@ a {
 
   .home-properties-1-container {
     width: 100%;
-    min-height: 90vh;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 64px;
+    margin-bottom: 64px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    text-align: center;
+  }
+  
+  .home-properties-1-container-image {
+    width: 37%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 0px;
+    
+    text-align: center;
+  }
+
+  .home-properties-1-container-letters {
+    width: 63%;
 
     display: flex;
     flex-direction: column;
@@ -465,13 +518,15 @@ a {
     margin: 0px;
     padding: 0px;
 
-    margin-top: 54px;
-    margin-bottom: 54px;
+    text-align: left;
+    margin-left: 24px;
+  }
 
-    padding-left: 10%;
-    padding-right: 10%;
+  .home-properties-1-image {
+    width: 480px;
+    height: 336px;
 
-    text-align: center;
+    align-self: center;
   }
 
   .home-properties-1-title {
@@ -490,7 +545,7 @@ a {
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 54px;
+    margin-top: 0px;
   }
 
   .home-properties-2-container {
@@ -2251,7 +2306,7 @@ a {
     padding: 0px;
     margin: 0px;
 
-    margin-top: 0px;
+    margin-top: 24px;
 
     padding-left: 24px;
     padding-right: 24px;
@@ -2262,9 +2317,15 @@ a {
   .home-properties-0-card {
     width: 100%;
 
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
 
-    margin-top: 54px;
+    text-align: left;
+
+    margin-top: 16px;
+    padding: 8px;
   }
 
   .home-properties-0-title {
@@ -2289,15 +2350,50 @@ a {
     margin-top: 8px;
   }
 
+  .home-properties-0-container-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: flex-start;
+
+    margin-right: 16px;
+  }
+
+  .home-properties-0-container-letters {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
   .home-properties-0-icon {
     width: 54px;
     height: 54px;
+
+    align-self: center;
   }
 
   .home-properties-1-container-image {
     width: 100%;
-    height: 100%;
     align-self: center;
+  }
+
+  .home-properties-1-image {
+    width: 320px;
+    height: 213px;
+
+    align-self: center;
+  }
+
+  .home-properties-1-container-letters {
+    width: 100%;
+    align-self: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
   }
 
   .home-properties-7-container-image {
@@ -2308,7 +2404,6 @@ a {
 
   .home-properties-1-container {
     width: 100%;
-    min-height: 75vh;
 
     display: flex;
     flex-direction: column;
@@ -2318,8 +2413,8 @@ a {
     padding: 0px;
     margin: 0px;
 
-    margin-top: 54px;
-    margin-bottom: 54px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 
     padding-left: 24px;
     padding-right: 24px;
@@ -2354,7 +2449,7 @@ a {
     padding-left: 24px;
     padding-right: 24px;
 
-    margin-top: 54px;
+    margin-top: 0px;
   }
 
   .home-properties-2-container {
