--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -474,11 +474,68 @@ a {
   }
 
   .home-properties-8-container-image {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: center;
+  }
+
+  .home-properties-8-image {
     width: 141px;
     height: 41px;
     align-self: center;
 
     margin-top: 16px;
+  }
+
+  .home-properties-8-container-tags {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    margin-top: 24px;
+  }
+
+  .home-properties-8-tag {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+  }
+
+  .home-properties-8-tag-container-image {
+    width: 24px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .home-properties-8-tag-image {
+    width: 24px;
+    height: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-8-tag-text {
+    width: 80px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
   }
 
   .home-properties-1-container {
@@ -522,21 +579,21 @@ a {
   }
 
   .home-properties-8-container {
-    width: 460px;
-    height: 230px;
+    width: 900px;
+    height: 450px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: center;
 
     margin: 0px;
-    padding: 24px;
+    padding: 32px;
 
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 40px;
+    padding-right: 40px;
 
-    text-align: center;
+    text-align: left;
 
     border-radius: 32px;
   }
@@ -591,14 +648,31 @@ a {
 
   .home-properties-8-title {
     font-family: "Cormonant";
-    font-size: 24px;
+    font-size: 40px;
     font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
   }
   
   .home-properties-8-text {
     font-family: "Montserrat";
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .home-properties-8-text-tag {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 700;
+    
+    padding: 4px;
+    margin: 0px;
   }
 
   .home-properties-2-wrapped {
@@ -2452,7 +2526,7 @@ a {
 
   .home-properties-8-container {
     width: 100%;
-    height: 280px;
+    height: 400px;
 
     display: flex;
     flex-direction: column;
@@ -2460,10 +2534,7 @@ a {
     align-content: center;
 
     margin: 0px;
-    padding: 24px;
-
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 32px;
 
     text-align: center;
   }
@@ -2497,11 +2568,68 @@ a {
   }
 
   .home-properties-8-container-image {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: center;
+  }
+
+  .home-properties-8-image {
     width: 141px;
     height: 41px;
     align-self: center;
 
     margin-top: 16px;
+  }
+
+  .home-properties-8-container-tags {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+
+    margin-top: 24px;
+  }
+
+  .home-properties-8-tag {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    text-align: center;
+    align-self: center;
+  }
+
+  .home-properties-8-tag-container-image {
+    width: 24px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .home-properties-8-tag-image {
+    width: 24px;
+    height: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-8-tag-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
   }
 
   .home-properties-1-container {
@@ -2549,12 +2677,29 @@ a {
     font-family: "Cormonant";
     font-size: 24px;
     font-weight: 700;
+
+    padding: 0px;
+    margin: 0px;
   }
   
   .home-properties-8-text {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
+    
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 8px;
+  }
+
+  .home-properties-8-text-tag {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 700;
+    
+    padding: 4px;
+    margin: 0px;
   }
 
   .home-properties-2-wrapped {
