--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -205,7 +205,7 @@ a {
   }
 
   .home-banner-letters-container {
-    width: 60%;
+    width: 55%;
 
     display: flex;
     flex-direction: column;
@@ -216,14 +216,14 @@ a {
 
     position: absolute;
 
-    top: 475px;
+    top: 450px;
     left: Calc(12.8% + 32px);
 
     z-index: 2;
   }
 
   .home-banner-image-container {
-    width: 40%;
+    width: 45%;
 
     display: flex;
     flex-direction: column;
@@ -667,11 +667,18 @@ a {
     text-align: center;
 
     border-radius: 32px;
+
+    background-color: #011C2F;
+    /*
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    */
   }
 
   .home-properties-11-wrapper {
     width: 100%;
-    min-height: 64vh;
+    min-height: 48vh;
 
     display: flex;
     flex-direction: column;
@@ -692,7 +699,7 @@ a {
 
   .home-properties-11-container {
     width: 100%;
-    height: 48vh;
+    height: 32vh;
 
     display: flex;
     flex-direction: column;
@@ -708,6 +715,7 @@ a {
     text-align: center;
 
     border-radius: 32px;
+    background-color: #011C2F;
   }
 
   .home-properties-1-container-image {
@@ -2361,7 +2369,7 @@ a {
 
   .home-banner-text {
     font-family: 'Montserrat';
-    font-weight: 400;
+    font-weight: 500;
     font-size: 14px;
 
     text-align: center;
@@ -2443,14 +2451,13 @@ a {
     justify-content: center;
     align-content: center;
 
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 0px;
+    margin: 0px;
+    padding: 0px;
   }
 
   .home-banner-image-image {
-    width: Calc(300px - 5%);
-    height: Calc(300px - 5%);
+    width: 100%;
+    height: 300px;
 
     align-self: center;
   }
@@ -2796,6 +2803,14 @@ a {
     padding: 32px;
 
     text-align: center;
+
+    background-color: #011C2F;
+    
+    /*
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    */
   }
 
   .home-properties-11-wrapper {
@@ -2820,7 +2835,7 @@ a {
 
   .home-properties-11-container {
     width: 100%;
-    height: 64vh;
+    height: 40vh;
 
     display: flex;
     flex-direction: column;
@@ -2836,6 +2851,7 @@ a {
     text-align: center;
 
     border-radius: 32px;
+    background-color: #011C2F;
   }
 
   .home-properties-1-container-image {
